best-practices-gpol/add-ns-quota/.chainsaw-test/exception-generated-limitrange.yaml
apiVersion: v1
kind: LimitRange
metadata:
  name: default-limitrange
  namespace: exception-ns-quota
