best-practices-gpol/add-ns-quota/.chainsaw-test/exception-generated-quota.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: default-resourcequota
  namespace: exception-ns-quota
