best-practices-gpol/add-ns-quota/.chainsaw-test/exception-resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exception-ns-quota
