best-practices-gpol/add-ns-quota/.chainsaw-test/wrong-token-exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: add-ns-quota-wrong-token
  namespace: policy-exceptions
spec:
  policyRefs:
  - name: add-ns-quota
    kind: GeneratingPolicy
  matchConditions:
  - name: exact-namespace
    expression: object.metadata.name == 'wrong-token-ns-quota'
  allowedValues:
  - ResourceQuota/not-default-resourcequota
