best-practices-gpol/add-ns-quota/.chainsaw-test/wrong-token-generated-limitrange.yaml
apiVersion: v1
kind: LimitRange
metadata:
  name: default-limitrange
  namespace: wrong-token-ns-quota
spec:
  limits:
  - default:
      cpu: 500m
      memory: 1Gi
    defaultRequest:
      cpu: 200m
      memory: 256Mi
    type: Container
