best-practices-gpol/add-ns-quota/.chainsaw-test/wrong-token-generated-quota.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: default-resourcequota
  namespace: wrong-token-ns-quota
spec:
  hard:
    requests.cpu: "4"
    requests.memory: "16Gi"
    limits.cpu: "4"
    limits.memory: "16Gi"
