best-practices-gpol/add-ns-quota/.chainsaw-test/wrong-token-resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wrong-token-ns-quota
